# mva-calculator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  new_agent_proposal.md  security_vulnerability.md
cyberswarm/: README.md  pyproject.toml
cyberswarm/cyberswarm/: __init__.py
cyberswarm/cyberswarm/audit/: __init__.py  backend.py  chain.py  crypto.py
cyberswarm/cyberswarm/audit/backends/: __init__.py  jsonl.py  memory.py
cyberswarm/cyberswarm/core/: __init__.py  schemas.py  swarm.py
cyberswarm/examples/: hello_swarm.py
cyberswarm/tests/: test_audit.py  test_crypto.py  test_swarm.py
ddm-l6/: .env  DEPLOY_STEPS_SERVER.md  Dockerfile  README_DEPLOY.md  ddm_p1_demo.html  ddm_p1_full.html  ddm_p2_demo.html  docker-compose.tools.yml  docker-compose.yml  l6-ddm-demo.html  l6-ddm-demo20260115.html  mission-control.html  nginx.conf  test_api.sh
ddm-l6/backend/: Dockerfile  agent_router_poc.py  llm_client.py  main.py  memory_store.py  requirements.txt  telemetry.py
ddm-l6/backend/agents/: __init__.py  debate_room.py  simulation_validator.py  temporal_analyst.py  vision_inspector.py
ddm-l6/backend/data_ops/: agentic_etl.py
ddm-l6/backend/eval/: __init__.py  judge.py  red_team.py
ddm-l6/backend/events/: __init__.py  iot_watchdog.py
ddm-l6/backend/memory/: __init__.py  alignment_store.py
ddm-l6/backend/robotics/: __init__.py  ros2_bridge.py  sitl_simulator.py
ddm-l6/backend/security/: __init__.py  provenance.py  tool_sandbox.py
ddm-l6/backend/tests_most/: test_adversarial_resilience.py  test_cryptographic_provenance.py  test_cyber_physical_bridge.py  test_dynamic_alignment.py  test_event_driven_swarm.py  test_hitl_workflow.py  test_multi_turn_agent.py  test_simulation_in_the_loop.py  test_spec_cases.py  test_swarm_debate.py  test_temporal_rag.py
ddm-l6/backend/tools/: temporal_rag.py
ddm-l6/data/: MiniMOST1128.csv  MiniMOST1128.xlsx  MiniMOST1128_completed.csv  MiniMOST1128_completed.xlsx  db_persistent.json  ddm_structure.csv  dimm_SQT-K860G6-BASY 1.3.csv  fake_dimm_SQT-K860G6-BASY 1.3.csv  mb_SQT-K860G6-BASY 1.3.csv  minimost_ie_flow.md
ddm-l6/docs/: MiniMOST_Pipeline_Design_Spec_EN.md  MiniMOST_Pipeline_Design_Spec_ZH.md  agentic-architecture-design.md  k8s-production-runbook.md  llmops-telemetry-guide.md  note-20251220.md  note-20260110.md
ddm-l6/scripts/: run_benchmarks.py
deploy/k8s/mva-platform/: Chart.yaml  values.yaml
docs/: architecture.md
mva-v2/: Dockerfile  Dockerfile.tools  README.md  docker-compose.tools.yml  docker-compose.yml  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
mva-v2/docs/: ARCHITECTURE.md  HANDOVER.md  ai-agent-deep-dive.zh-TW.md  legacy-functional-spec.en.md  legacy-functional-spec.zh-TW.md  legacy-gap-review.zh-TW.md  parity-refactor-notes.zh-TW.md  smoke-test-plan.md
mva-v2/src/: App.tsx  styles.css
mva-v2/src/components/: ErrorBoundary.tsx  KpiCard.tsx  SectionCard.tsx  Sidebar.tsx  SummaryPage.tsx
mva-v2/src/domain/: ai-agent.ts  calculations.ts  csv.ts  defaults.ts  exporters.ts  importers.ts  models.ts  persistence.ts
mva-v2/tests/: setup.ts
(+45 files in other folders)
